# rust-api

./: .cursorrules  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  env.example
postgres-init/: 01-init.sql
src/: config.rs  main.rs
src/common/: config.rs  container.rs  mod.rs
src/common/database/: connection.rs
src/common/errors/: mod.rs
src/common/repositories/: base.rs  mod.rs
src/common/session/: mod.rs
src/common/state/: mod.rs
src/errors/: mod.rs
src/handlers/: health.rs  users.rs
src/models/: mod.rs  response.rs  user.rs
src/modules/auth/: controller.rs  entity.rs  middleware.rs  mod.rs  repository.rs  route.rs  service.rs
src/modules/user/: controller.rs  entity.rs  mod.rs  repository.rs  route.rs  service.rs
src/routes/: mod.rs
src/state/: mod.rs
